--- a/index.html
+++ b/index.html
@@ -11,22 +11,31 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #005a5a;
+            background-color: #ffe0df;
             overflow: hidden;
+            filter: drop-shadow(4px 6px 12px #ff008c);
         }
         canvas {
             display: block;
+            margin-left: -29%;
         }
         #flecha {
             position: absolute;
             top: 4%; /* Ajusta la posición vertical */
-            left: 48,5%; /* Ajusta la posición horizontal */
+            left: 23%; /* Ajusta la posición horizontal */
             width: 0;
             height: 0;
             border-left: 20px solid transparent;
             border-right: 20px solid transparent;
-            border-top: 50px solid #ff0000;
+            border-top: 50px solid #ff0e0e;
             transform: translateY(-50%);
+        }
+
+        #Info{
+            height: 400px;
+            width: auto;
+            margin-left: -24%;            
+            filter: drop-shadow(4px 8px 16px #f700ff);
         }
         
     </style>
@@ -34,6 +43,7 @@
 <body>
     <div id="flecha"></div>
     <canvas id="ruleta"></canvas>
+    <img id="Info" src="image.png">
     <audio id="spinAudio" src="wheel.mp3"></audio>
     <audio id="endAudio" src="tada.mp3"></audio>
 
